[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Sheet/Forbidden_Lands/Itens/Item_illustrations/Longsword.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Sheet/Forbidden_Lands/Item_aditor/Item_panel.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=57]
border_color = Color( 0.180392, 0.180392, 0.180392, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=58]
bg_color = Color( 1, 0.968627, 0.886275, 1 )
corner_radius_top_left = 10
corner_radius_bottom_left = 10

[node name="Panel" type="Panel"]
margin_right = 1002.0
margin_bottom = 30.0
rect_min_size = Vector2( 1002, 30 )
custom_styles/panel = SubResource( 57 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="HBoxContainer"]
margin_right = 130.0
margin_bottom = 30.0
rect_min_size = Vector2( 130, 30 )
custom_styles/panel = SubResource( 58 )

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 30 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 7

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
visible = false
margin_left = 134.0
margin_right = 138.0
margin_bottom = 30.0

[node name="Button" type="Button" parent="HBoxContainer"]
margin_left = 134.0
margin_right = 289.0
margin_bottom = 30.0
rect_min_size = Vector2( 155, 0 )
text = "BroadSword"
icon_align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 293.0
margin_right = 1002.0
margin_bottom = 30.0
size_flags_horizontal = 3
alignment = 1

[node name="Bonus" type="Label" parent="HBoxContainer/HBoxContainer"]
margin_top = 8.0
margin_right = 168.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "12"
align = 1

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/HBoxContainer"]
margin_left = 172.0
margin_right = 176.0
margin_bottom = 30.0

[node name="Class" type="Label" parent="HBoxContainer/HBoxContainer"]
margin_left = 180.0
margin_top = 8.0
margin_right = 348.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "12"
align = 1

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer/HBoxContainer"]
margin_left = 352.0
margin_right = 356.0
margin_bottom = 30.0

[node name="Cost" type="Label" parent="HBoxContainer/HBoxContainer"]
margin_left = 360.0
margin_top = 8.0
margin_right = 528.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "12"
align = 1

[node name="VSeparator6" type="VSeparator" parent="HBoxContainer/HBoxContainer"]
margin_left = 532.0
margin_right = 536.0
margin_bottom = 30.0

[node name="Body_Part" type="Label" parent="HBoxContainer/HBoxContainer"]
margin_left = 540.0
margin_top = 8.0
margin_right = 709.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Body"
align = 1

[connection signal="gui_input" from="HBoxContainer" to="." method="_on_HBoxContainer_gui_input"]
[connection signal="mouse_entered" from="HBoxContainer" to="." method="_on_HBoxContainer_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer" to="." method="_on_HBoxContainer_mouse_exited"]
[connection signal="gui_input" from="HBoxContainer/Panel/TextureRect" to="." method="_on_TextureRect_gui_input"]
[connection signal="mouse_entered" from="HBoxContainer/Panel/TextureRect" to="." method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Panel/TextureRect" to="." method="_on_TextureRect_mouse_exited"]
